--- a/templates/var/lib/tomcat7/webapps/ROOT/WEB-INF/classes/portal-ext.properties.erb
+++ b/templates/var/lib/tomcat7/webapps/ROOT/WEB-INF/classes/portal-ext.properties.erb
@@ -36,3 +36,11 @@ layout.user.public.layouts.enabled=false
 layout.user.public.layouts.modifiable=false
 <% end %>
 
+# Set the auto-extend mode to true to avoid having to ask the user whether to
+# extend the session or not. Instead, it will be automatically extended. The
+# purpose of this mode is to keep the session open as long as the user's browser
+# is open with a portal page loaded. It is recommended to use this setting
+# along with a smaller "session.timeout", such as 5 minutes, for better performance.
+
+session.timeout.auto.extend=true
+
