#1 fix-try for liferay Server failure of /list-services

--- a/templates/etc/tomcat7/Catalina/localhost/liferay-ROOT.xml.erb
+++ b/templates/etc/tomcat7/Catalina/localhost/liferay-ROOT.xml.erb
@@ -11,6 +11,7 @@
        maxActive="100"
        maxIdle="30"
        maxWait="10000"
+       removeAbandonedTimeout="60"
     />
 
     <!-- JAAS -->
@@ -35,4 +36,3 @@
 
     <!--<Manager className="com.liferay.support.tomcat.session.SessionLessManagerBase" />-->
 </Context>
-
